# midi-hack

./: Cargo.toml  README.md  TODO.md
src/: key_handler.rs  lib.rs  main.rs  midi.rs  music.rs  practice_program.rs  speech.rs  time.rs
