[package]
name = "midi_hack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sentry = "0.27.0"
midir = "0.8.0"
log="0.4.0"
env_logger="0.9.0"
clap={version = "3.2.20", features = ["derive"]}
lazy_static="1.4.0"